language/move-lang/tests/move_check/typing/borrow_local_invalid.exp
error: 

   ┌── tests/move_check/typing/borrow_local_invalid.move:2:15 ───
   │
 2 │     fun t0(r: &u64, r_mut: &mut u64) {
   │               ---- Expected a single non-reference type, but found: '&u64'
 3 │         &r;
   │         ^^ Invalid borrow
   │

error: 

   ┌── tests/move_check/typing/borrow_local_invalid.move:2:28 ───
   │
 2 │     fun t0(r: &u64, r_mut: &mut u64) {
   │                            -------- Expected a single non-reference type, but found: '&mut u64'
 3 │         &r;
 4 │         &r_mut;
   │         ^^^^^^ Invalid borrow
   │

error: 

   ┌── tests/move_check/typing/borrow_local_invalid.move:2:15 ───
   │
 2 │     fun t0(r: &u64, r_mut: &mut u64) {
   │               ---- Expected a single non-reference type, but found: '&u64'
   ·
 5 │         &mut r;
   │         ^^^^^^ Invalid borrow
   │

error: 

   ┌── tests/move_check/typing/borrow_local_invalid.move:2:28 ───
   │
 2 │     fun t0(r: &u64, r_mut: &mut u64) {
   │                            -------- Expected a single non-reference type, but found: '&mut u64'
   ·
 6 │         &mut r_mut;
   │         ^^^^^^^^^^ Invalid borrow
   │

